* Reduce unnecessary calls to panel.revalidate() * Introduce RepaintEvent * Remove some direct calls to "igv repaint", replace with event * Serialize repaint if in batch mode